# camera_tracking

./: CMakeLists.txt  Makefile  README.md  capture_video  color_select.cpp  detect_objects  flash_track.cpp  green_move  green_move.cpp  gst_camera_test.cpp  gst_lib_test.cpp  gst_opencv  gst_opencv_test  gst_opencv_test.cpp  lastmake.txt  move_detect  move_detecting.cpp  no_ui_flash.cpp  simple_web_server.cpp  test  test_gst  traking_len.cpp  web_green_detect  web_green_detect.cpp  webcam_stream
clean/: Makefile  cam_opencv.cpp  clean.cpp
gst_lib/: CMakeCache.txt  Makefile  cmake_install.cmake  gst_app  main.cpp  start.sh
tensorrt/: test_tensor.cpp
